<resources>
    <string name="app_name">HeathTrackerApp</string>
    <string name="my_api_key">AIzaSyApDBHYO8X4x6wHje9G8dEiZu37ZR1eQ5g</string>
    <string name="my_email_app_password">pvizwgsjrrqqtqrw</string>
    <string name="my_email">kavinda.local.dev@gmail.com</string>


    <!--    other values-->
    <string name="continue_text">Continue</string>
    <string name="heath_tracker_heading">Heath Tracker</string>
    <string name="back_text">Back</string>
    <string name="sign_in_with_us_text">Sign In With Us</string>
    <string name="sign_in_text">Sign In</string>
    <string name="email_text">Email</string>
    <string name="don_t_have_an_account_text">don\'t have an account?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="reset_text">Reset</string>
    <string name="password_text">Password</string>
    <string name="back_button_image_description">Back Button image</string>
    <string name="all_ready_have_an_account_text">all ready have an account?</string>
    <string name="sing_up_with_us_text">Sing Up With Us</string>
    <string name="confirm_password_text">confirm password</string>
    <string name="user_name_text">user name</string>
    <string name="reset_heading">Reset</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="report">Report</string>
    <string name="notification">Notification</string>
    <string name="education">Education</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_image_background_description">user image background</string>
    <string name="welcome_greet">Welcome</string>
    <string name="update_text">Update</string>
    <string name="cancel_text">Cancel</string>
    <string name="delete_account_text">Delete Account</string>
    <string name="logout_text">logout</string>
    <string name="profile_heding">Profile</string>
    <string name="medication_list_heding">Medication List</string>
    <string name="search_for_medication">search for medication</string>
    <string name="see_details_text">see details</string>
    <string name="upcomming_medication_remainders">Upcomming Medication Remainders</string>
    <string name="summary">Summary</string>
    <string name="add_medication">add</string>
    <string name="divider">divider</string>
    <string name="resent_notification">Resent Notification</string>
    <string name="educational_resources_heading">Educational Resources</string>
    <string name="reports_heading">Reports</string>
    <string name="about_medication_heading">About Medication</string>
    <string name="name_of_medicine">Name of medicine:</string>
    <string name="paracetamol">Paracetamol</string>
    <string name="description">Description:</string>
    <string name="paracetamol_description">decription of the medicine\n</string>
    <string name="dosage">Dosage:</string>
    <string name="paracetamol_dosage">2</string>
    <string name="paracetamol_image">paracetamol_image</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_medication_heading">Add Medication</string>
    <string name="edit_medication_text">Edit Medication</string>
    <string name="map_image">map image</string>
    <string name="display_track_on_google_map">Find Your Nearest Medical Center</string>
    <string name="enter_your_starting_point">Origin</string>
    <string name="enter_your_destination">Destination</string>
    <string name="get_direction">Get Direction</string>
    <string name="image">Picture:</string>
    <string name="medication_name_hint">Medication Name</string>
    <string name="medication_description_hint">Description</string>
    <string name="medication_dosage_hint">Dosage</string>
    <string name="add_picture">Add Picture</string>
    <string name="set_a_audio_remainder">Set a audio remainder</string>
    <string name="or">or</string>
    <string name="set_a_notification_remainder">set a notification remainder</string>
    <string name="frequency">Frequency</string>
    <string name="_00">00</string>
    <string name="add">Add</string>
    <string name="floating_button">floating button</string>
    <string name="enable_fingerprint_text">Enable Fingerprint</string>
    <string name="opt_hint">03659</string>
    <string name="didn_t_receive_the_email_yet">didn\'t receive the email yet?</string>
    <string name="resend_email">resend email</string>
    <string name="enter_opt_code">Enter OPT Code</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="verify">Verify</string>
    <string name="add_time">Add time</string>
    <string name="_12_00_a_m">12 : 00: a.m</string>
    <string name="after">after</string>
    <string name="hours">hours</string>
    <string name="_6">6</string>
    <string name="image_overview">Image overview</string>
    <string name="time_of_taking">Time of taking</string>
    <string name="time_of_frequency">Time of frequency</string>
    <string name="every_6_hours">every 6 hours</string>
</resources>