<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ResetPasswordActivity">

    <LinearLayout
        android:id="@+id/Back_button_area_reset"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/input_background"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/reset_button_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button_image_description"
            android:src="@drawable/chevronleft"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_text"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/form_area"
        android:layout_below="@+id/Back_button_area_reset"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/reset_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/reset_password_text"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reset_email"
            android:layout_below="@+id/reset_heading"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:hint="@string/email_text"
            android:textColorHint="@color/lite_text_color"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_background"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/reset_password"
            android:layout_below="@+id/reset_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:hint="@string/password_text"
            android:textColorHint="@color/lite_text_color"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_background"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/reset_Confirm_password"
            android:layout_below="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:hint="@string/confirm_password_text"
            android:textColorHint="@color/lite_text_color"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_background"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reset_button"
            android:layout_below="@+id/reset_Confirm_password"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_text"
            android:paddingVertical="10dp"
            android:paddingHorizontal="25dp"
            android:textColor="@color/black"
            android:background="@drawable/button_background_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

</RelativeLayout>