<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    tools:context=".EmailVerifyActivity">

    <TextView
        android:id="@+id/email_verify_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/email_verify_opt"
        android:layout_below="@+id/email_verify_heading"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:hint="@string/opt_hint"
        android:textColorHint="@color/lite_text_color"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/input_background"
        android:autofillHints="phone"
        android:inputType="number"
        tools:ignore="TextFields" />

    <LinearLayout
        android:id="@+id/text_area_for_resend_email"
        android:layout_below="@+id/email_verify_opt"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_receive_the_email_yet"
            android:textColor="@color/lite_text_color"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/resend_email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_email"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verify_email_button"
        android:layout_below="@+id/text_area_for_resend_email"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:paddingVertical="10dp"
        android:paddingHorizontal="25dp"
        android:textColor="@color/black"
        android:background="@drawable/button_background_primary" />

</RelativeLayout>